--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "rust_wasm_the_hard_way_02",
     "rust_wasm_the_hard_way_03",
     "rust_wasm_the_hard_way_04",
+    "rust_wasmer_01"
 ]
 
 # [profile.release]
